# dotless

./: .gitignore  .replit  Cargo.toml  README.md  era_paid_events.json  justfile  live_events.json  package-lock.json  package.json  replit.nix  schema.graphql  squid.yaml  tailwind.config.ts  theme.json
.claude/: settings.local.json
client/: index.html
client/src/: main.tsx
client/src/components/: Layout.tsx  ModelComparison.tsx
client/src/lib/: apollo-client.ts
client/src/lib/graphql/: queries.ts  types.ts
client/src/lib/utils/: inflation.ts
client/src/pages/: HomePage.tsx
deploy/: README.md  ansible.cfg  inventory.yml  playbook.yml  requirements.yml
deploy/templates/: Caddyfile.j2  dotless.service.j2
dotless-rs/: era_paid_events.json  justfile
dotless-rs/src/: data.rs  inflation.rs  live.rs  main.rs
dotless-rs/templates/: index.html
metadata/: asset-hub-polkadot.scale
server/: routes.ts
src/: data.rs  inflation.rs  ingest.rs  main.rs  main.ts  processor.ts
src/types/: events.ts
static/: style.css
subsquid/: .env  justfile  package-lock.json  package.json  squid.yaml  typegen.json
subsquid/.claude/: settings.local.json
subsquid/db/migrations/: 1732469689534-Data.js
subsquid/src/: main.ts  processor.ts
subsquid/src/types/: index.ts  v0.ts  v9090.ts
subsquid/src/types/balances/: storage.ts
subsquid/src/types/staking/: events.ts
templates/: index.html
